# covid-19-sarov

GraphGenerator/docs/: dbJobGraph.gv  описание humans_dat.txt
GraphGenerator/src/: bookdelegate.cpp  books.pro  bookwindow.cpp  bookwindow.h  bookwindow.ui  initdb.h
config/: Sarov.gp  Sarov_autoupdate.gp
doc/: !ReadMe.txt  jobGraph.gv  Подготовка исходных данных для модели.pptx  описание humans_dat.txt
gnuplot/: Sarov.gp  VNIIEF.gp
src/: CMakeLists.txt  Location.cpp  Location.h  Model.cpp  Model.h  Person.cpp  Person.h  PersonShedule.cpp  SEIR_model.h  data_types.h  lib_migration.cpp  lib_migration.h  main.cpp  main_migration_example.cpp  translate_data.cpp  translate_data.h
src/John/: CMakeLists.txt  Location.cpp  Location.h  Model.cpp  Model.h  Person.cpp  Person.h  lib_migration.h  main.cpp  translate_data.cpp
